--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <button class="btn">Click here to start</button>
       </div>
     </section>
+    <script src="./app.js"></script>
   </body>
 </html>
